Make idea title wrap fix #51

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -126,6 +126,7 @@ body {
         .idea-head {
             h1 {
                 display:inline-block;
+                word-break: break-word;
             }
             .profile {
                 display:inline-block;
